tests/invalid/exported_component_requires_host_ctor.wio
@Default(private)
@Export
component HiddenStats {
    public hp: i32;

    OnConstruct(value: i32) {
        self.hp = value;
    }
}
